[gd_scene load_steps=2 format=3 uid="uid://dh2p8pbdig644"]

[ext_resource type="Script" uid="uid://yxk1jdragv27" path="res://src/ui/GameOverScreen3D.gd" id="1_script"]

[node name="GameOverScreen3D" type="Node3D"]
script = ExtResource("1_script")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="GameOverUI" type="Control" parent="SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewport/GameOverUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="SubViewport/GameOverUI/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 96
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeaderboardTitle" type="Label" parent="SubViewport/GameOverUI/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 48
text = "HIGH SCORES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeaderboardContainer" type="VBoxContainer" parent="SubViewport/GameOverUI/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 8

[node name="ClickHint" type="Label" parent="SubViewport/GameOverUI/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 24
text = "CLICK ANYWHERE TO RESTART"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
pixel_size = 0.001
alpha_cut = 1
